--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -373,7 +373,7 @@ margin on the iframe, cause it breaks stuff. */
     margin-bottom: 5rem;
     text-align: center;
     color: #fff;
-    background: #303538 no-repeat center center;
+    background: #0E7AC4 no-repeat center center;
     background-size: cover;
 }
 
