--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,9 @@
     <!-- Customisation  -->
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css" />
 
+    <meta property="og:title" content="{{ page.title }}" />
+    <meta property="og:image" content="/assets/image/ogp.png" />
+
 </head>
 <body class="home-template">
 
