--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,8 +3,8 @@ layout: default
 ---
 
 <main class="content" role="main">
-    <article class="post">
-        <header class="post-header">
+    <header class="post-header blog-post">
+        <div class="post-headet_inner">
             <a id="blog-logo" href="{{site.baseurl}}">
                 {% if site.logo %}
                     <img src="{{site.logo}}" alt="{{ site.name }}" />
@@ -12,7 +12,10 @@ layout: default
                     <span class="blog-title">{{ site.name }}</span>
                 {%endif%}
             </a>
-        </header>
+        </div>
+    </header>
+
+    <article class="post">
 
         <h1 class="post-title">{{ page.title }}</h1>
 
