modify image path

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css" />
 
     <meta property="og:title" content="{{ page.title }}" />
-    <meta property="og:image" content="/assets/image/ogp.png" />
+    <meta property="og:image" content="http://rsuke.github.io/assets/images/ogp.png" />
 
 </head>
 <body class="home-template">
