--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -66,15 +66,15 @@ archive: false
 
             <section class="share">
                 <h4>Share this post</h4>
-                <a class="icon-twitter" href="http://twitter.com/share?text={{page.title}}&amp;url=http://{{ site.host }}{{ page.url }}"
+                <a class="icon-twitter" href="http://twitter.com/share?text={{page.title}}&amp;url=http://rsuke.github.io/{{ page.url }}"
                     onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
                     <span class="hidden">Twitter</span>
                 </a>
-                <a class="icon-facebook" href="http://www.facebook.com/sharer.php?u=http://{{ site.host }}{{page.url}}&t={{page.title}}"
+                <a class="icon-facebook" href="http://www.facebook.com/sharer.php?u=http://rsuke.github.io/{{page.url}}&t={{page.title}}"
                     onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
                     <span class="hidden">Facebook</span>
                 </a>
-                <a class="icon-google-plus" href="https://plus.google.com/share?url=http://{{ site.host }}{{page.url}}"
+                <a class="icon-google-plus" href="https://plus.google.com/share?url=http://rsuke.github.io/{{page.url}}"
                    onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;">
                     <span class="hidden">Google+</span>
                 </a>
